--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+Swift Mailer Bundle, by Taylor Otwell
+---------------------------------------------
+
+A [Laravel](http://laravel.com) Swift Mailer bundle, installable via the Artisan CLI:
+
+    php artisan bundle:install swiftmailer
+
 Swift Mailer, by Chris Corbyn
 -----------------------------
 
